package gruppo1.progettorubrica.controllers;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;

/**
 * @brief Controller che visualizza il popup di conferma di un'operazione.
 * 
 * Tale popup consente all'utente di confermare o annullare un'operazione.
 */
public class ConfirmPopupController {
    
    /**
     * @brief Tale metodo conferma l'operazione.
     * @param[in] event 
     */
    @FXML
    private void onConfirm(ActionEvent event) {

    }

    /**
     * @brief Tale metodo annulla l'operazione.
     * @param[in] event 
     */
    @FXML
    private void onCancel(ActionEvent event) {

    }
}
