@startuml DiagrammaDelleClassiEssenziale
skinparam linetype ortho
'left to right direction


'****************** CLASSI ******************
class Contact {
    - String name 
    - String surname 
    - String[] numbers
    - String[] emails
    - byte[] profilePicture
    - Set<Integer> tagIndexes  
}

class AddressBook {
    - {static} AddressBook instance
    - ObservableList<Contact> contacts
    - ObservableSet<String> tags
    - String dbUrl
    - Database db

    + void saveConfig()
    + void loadConfig()
    + void saveOBJ()
    + AddressBook loadOBJ()
    + void saveToDB()
    + AddressBook loadFromDB()    
}

class MainController {
    - AddressBook addressBook

    - void onAddContact()
    - void onContactClicked()
    - void onSaveContact()
    - void onModifyContact()
    - void onRemoveContact()
    - void onCancel()
    - void showImportPopup()
    - void showExportPopup()
    - void showConfigPopup()
    - void showImagePopup()
    - void showManageTagsPopup()
}

class ImportPopupController {
    - ContactManager contactManager
    - void onImport()
}

class ExportPopupController {
    - ContactManager contactManager
    - void onExport()
}

class ManageTagsPopupController {
    - TagManager tagManager
    - void onAdd()
    - void onUpdate()
    - void onDelete()
}

class ImagePopupController {
    + File getSelectedImage()
}

class ConfirmPopupController {
    onConfirm()
    onCancel()
}

class ConfigPopupController {
    - void onVerify()
    - void onConfirm()
}

class Tag {
    - final int id
    - String descrizione
}

class Database {
    + {static} boolean verifyDBUrl(String url)
    + void upsertContact(Contact c)
    + void removeTag(Tag tag)
    + Collection<Contact> getAllContacts()
    + Collection<Tag> getAllTags()
} 

'****************** INTERFACCE ******************
interface Serializable

interface TagManager {
    +{abstract} void addTag(Tag tag)
    +{abstract} Tag removeTag(Tag tag)
    +{abstract} Tag getTag(int id)
    +{abstract} ObservableList<Tag> getAllTags()
}

interface ContactManager {
    +{abstract} ObservableList<Contact> getAllContacts()
    +{abstract} addContact(Contact c)
    +{abstract} removeContact(Contact c)
}

'****************** RELAZIONI ******************
Contact ..|> Serializable

Tag ..|> Serializable

AddressBook "1" o-- "0..*" Contact
AddressBook "1" *-- "0..1" Database
AddressBook "1" o-- "0..*" Tag
AddressBook ..|> TagManager
AddressBook ..|> ContactManager

MainController "1" o-- "1" AddressBook
MainController ..> ImagePopupController
MainController ..> ConfirmPopupController

ManageTagsPopupController ..> ConfirmPopupController

ExportPopupController "1" o-- "1" ContactManager

ImportPopupController "1" o-- "1" ContactManager

@enduml